--- a/css.css
+++ b/css.css
@@ -33,15 +33,6 @@ h1
 {
 font-size: 80px
 } 
-h3 {
-font-size: 30px
-}
-#fotopiedi {
-margin-top: 200px;
-margin-right: 500px;
-margin-bottom: 50px;
-margin-left: 400px
-}
 h4 {
 font-size: 20px
 }
@@ -53,44 +44,66 @@ font-family: 'Lucida Handwriting'
 h4 {
 font-family: 'Lucida Console'
 }
-h3 {
-font-family: "Copperplate"
+.text {
+    margin-top: 30px;
+    margin-right: 400px;
+    margin-bottom: 30px;
+    margin-left: 400px
+    }
+    
+   
+    
+    .button {
+    margin-top: 30px;
+    margin-right: 400px;
+    margin-bottom: 50px;
+    margin-left: 400px
+    }
+    
+    #iscrizione {
+    background: Gainsboro;
+    color: Indigo;
+    margin-top: 10px;
+    margin-right: 300px;
+    margin-bottom: 20px;
+    margin-left: 300px;
+    }
+    
+    
+    #iscrizione {
+    font-family: "Monaco"
+    }
+    
+    
+    
+    h3
+    {
+    margin-top: 10px;
+    margin-right: 300px;
+    margin-bottom: 20px;
+    margin-left: 300px;
+    }
+    h3 {
+        font-size: 30px
+        }
+    .button2 {
+     margin-top: 30px;
+    margin-right: 400px;
+    margin-bottom: 50px;
+    margin-left: 400px
+    }
+    #button3 {
+        margin-top: 30px;
+        margin-right: 400px;
+        margin-bottom: 50px;
+        margin-left: 400px
+        }
+#sassi {
+        margin-top: 50px;
+        margin-right: 600px;
+        margin-bottom: 50px;
+        margin-left: 600px
 }
-
-#text {
-margin-top: 30px;
-margin-right: 400px;
-margin-bottom: 30px;
-margin-left: 400px
-}
-
-#email {
-margin-top: 30px;
-margin-right: 400px;
-margin-bottom: 30px;
-margin-left: 400px
-}
-
-#button {
-margin-top: 30px;
-margin-right: 400px;
-margin-bottom: 50px;
-margin-left: 400px
-}
-
-#iscrizione {
-background: Gainsboro;
-color: Indigo;
-margin-top: 10px;
-margin-right: 300px;
-margin-bottom: 20px;
-margin-left: 300px;
-}
-
-#iscrizione {
-font-family: "Monaco"
-}
-
 
 
 
