--- a/css.css
+++ b/css.css
@@ -92,7 +92,7 @@ font-family: 'Lucida Console'
     margin-bottom: 50px;
     margin-left: 400px
     }
-    #button3 {
+    .button3 {
         margin-top: 30px;
         margin-right: 400px;
         margin-bottom: 50px;
